# neo4j-study

./: .env  pyproject.toml  test.py
test/sec1/: delete_test.py  match_test.py  node_test.py  relationship_test.py  remove_test.py  set_test.py
test/sec2/: variable_length_test1.py  variable_length_test2.py  variable_length_test3.py
